# stable_signature-experiments

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  CHANGES_SUMMARY.md  GETTING_STARTED.md  IMPROVEMENTS_SUMMARY.md  Makefile  NOTEBOOK_MIGRATION_GUIDE.md  Pipeline_mk4.ipynb  QUICKSTART.md  README.md  REFACTORING_COMPLETE.md  combined_transforms.py  config.py  generate_watermarked_images.py  generate_watermarked_imgs.py  pipeline_mk4.ipynb  pipeline_mk4_user_friendly.ipynb  pyproject.toml  requirements.txt  requirements_user_friendly.txt  run_evals.py  setup.py
advanced_attacks/: README.md  Readme.md  __init__.py  attack_class.py  attack_registry.py  attack_types.py  attacks.py  diffusion_attacks.py  frequency_attacks.py  integrated_watermark_attackers.py  resdpipeline_attack.py  run.py
common/: __init__.py  config.py  image_io.py  image_utils.py  io_utils.py  logging_utils.py  metrics.py  seeding.py  transformations.py  transforms.py
configs/: example_hidden_eval.yaml
detector/: README.md  __init__.py  detector.py  models.py  run.py  utils.py  watermark_detector.py
docs/: README_generate_watermarked_images.md  README_generate_watermarked_imgs.md  README_model_architecture.md  README_transformations_pipeline.md
experiments/: runner.py
experiments/configs/: default_config.yaml
outputs/: README.md
stable_signature_experiments/: __init__.py
stable_signature_experiments.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
stable_signature_experiments/watermarking_methods/: __init__.py  base.py
stable_signature_experiments/watermarking_methods/shared/: __init__.py  io.py  logging_utils.py  transforms.py
stable_signature_experiments/watermarking_methods/shared/advanced_attacks/: __init__.py  integrated_watermark_attackers.py
stable_signature_experiments/watermarking_methods/shared/common/: transforms_registry.py
stable_signature_experiments/watermarking_methods/shared/tools/: config.py  transformations.py
stable_signature_experiments/watermarking_methods/stable_signature/: __init__.py  generate_watermarked_images.py  method.py  pipelines.py
stable_signature_experiments/watermarking_methods/stable_signature/advanced_attacks/: res_pipe.py  resdpipeline_attack.py
stable_signature_experiments/watermarking_methods/stable_signature/core/: __init__.py  models.py
stable_signature_experiments/watermarking_methods/stable_signature/core/detector/: detect_watermark_demo_copy.ipynb
stable_signature_experiments/watermarking_methods/stable_signature/detector/: Readme.md  detect_watermark_demo.ipynb
stable_signature_experiments/watermarking_methods/stable_signature/pipelines/: Pipeline_mk4.ipynb
stable_signature_experiments/watermarking_methods/trustmark/: __init__.py  method.py
stable_signature_experiments/watermarking_methods/watermark_anything/: __init__.py  __main__.py  api.py  backend.py  count_images.py  examples.py  extract_matching_images.py  image_to_image.py  inference hacking (2).ipynb  method.py  multiple_wm_detector.ipynb  pipelines.py  runner.py  single_wm_detector.ipynb
stable_signature_experiments/watermarking_methods/watermark_anything/core/: __init__.py  models.py
stable_signature_experiments/watermarking_methods/watermark_anything/scripts/: count_images.py  extract_matching_images.py
tools/: evaluation.py  transformations.py  wm_cli.py
watermark_models/: README.md
watermark_models/stable-signature/: README.md
watermark_models/trustmark/: README.md
watermark_models/watermark-anything/: README.md
watermarking/: __init__.py  base.py  registry.py
watermarking/models/: __init__.py  hidden_decoder.py  stable_signature.py
watermarking_methods/: __init__.py  cli.py  pipelines.py
watermarking_methods.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
watermarking_methods/shared/: __init__.py  config.py  image_utils.py  io.py  logging_utils.py
watermarking_methods/stable_signature/: __init__.py  cli.py
watermarking_methods/stable_signature/attacks/: attack_class.py  run_attack_on_images.txt
watermarking_methods/stable_signature/cli/: __init__.py
watermarking_methods/stable_signature/core/: __init__.py
watermarking_methods/stable_signature/detector/: README.md  main_detector.txt  models.py  watermark_detector.py
watermarking_methods/stable_signature/pipelines/: __init__.py
watermarking_methods/stable_signature/utils/: __init__.py
watermarking_methods/watermark_anything/: README.md  __init__.py  cli.py  examples.py  extract_images.py.amltmp  mask_wm_detector.ipynb  method.py
watermarking_methods/watermark_anything/scripts/: count_images.py
